--- a/src/results.css
+++ b/src/results.css
@@ -91,6 +91,9 @@ body {
 .detailed-graphs-section {
   margin-bottom: 30px;
 }
+.detailed-graphs-section h3{
+  color: #000;
+}
 
 .career-detail {
   margin-bottom: 20px;
@@ -130,6 +133,10 @@ body {
   list-style-type: disc;
   padding-left: 20px;
   color:#000
+}
+
+.alternatives-section h3{
+  color: #000;
 }
 
 /* Footer styling */
