--- a/src/results.css
+++ b/src/results.css
@@ -151,3 +151,9 @@ body {
   margin-top: 1px;
   margin-bottom: 20px;
 }
+.detailed-graphs-section h3 { /* TOP 3 CAREERS AND WHY */
+  color: #000;
+  font-size: 2.4rem; /* Increase font size */
+  text-align: center; /* Center align the text */
+  margin-bottom: 20px; /* Add some space below */
+}
