--- a/src/results.css
+++ b/src/results.css
@@ -14,12 +14,14 @@ body {
   padding: 20px;
 }
 
-/* Header styling */
+.h1{
+  font-size: 30rem;
+}
 .header {
   text-align: center;
   background-color: #007bff;
   color: white;
-  padding: 10px;
+  padding: 20px;
 }
 
 /* Main content styling */
@@ -86,7 +88,7 @@ body {
 .about-you-header {
   text-align: center;
   margin-bottom: 15px;
-  font-size: 1.25rem;
+  font-size: 3rem;
   color: #333;
 }
 
