Changed main menu button color

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,6 +1,6 @@
 :root {
-  --quiz-button-color: #00ff4c;
-  --quiz-button-color-hover: #008a29;
+  --quiz-button-color: #0077ff;
+  --quiz-button-color-hover: #015281;
 
   --question-button-color: #585858;
   --question-button-color-hover: #003369;
