--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -8,6 +8,7 @@ html, body {
     width: 95%;
     margin: 40px auto;
     padding: 40px;
+    transition: all 0.3s ease;
     background-color: var(--question-wrapper-background);
     border-radius: 10px;
     box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.15);
@@ -15,6 +16,7 @@ html, body {
 
 /* Header Styling */
 .home-page h1 {
+    transition: all 0.3s ease;
     color: var(--question-wrapper-header-text);
     text-align: center;
     font-size: 3rem;
@@ -24,6 +26,7 @@ html, body {
   
 /* Paragraph Styling */
 .home-page p {
+    transition: all 0.3s ease;
     color: var(--question-wrapper-text);
     font-size: 1.5rem;
     line-height: 1.6;
@@ -78,6 +81,7 @@ p {
     width: 320px;
     height: 60px;
     font-size: 30px;
+    transition: all 0.3s ease;
     background-color: var(--quiz-button-color);
 }
 
@@ -86,15 +90,18 @@ p {
     width: 320px;
     height: 60px;
     font-size: 30px;
+    transition: all 0.3s ease;
     background-color: var(--quiz-button-color-hover);
 }
 
 button {
+    transition: all 0.3s ease;
     background-color: var(--question-button-color);
     color: var(--question-button-text-color);
 }
 
 button:hover {
+    transition: all 0.3s ease;
     background-color: var(--question-button-color-hover); /* Bootstrap blue for hover */
     transform: scale(1.05); /* Slight scaling effect */
     color: var(--question-button-text-color-hover); /* White text on hover */
