--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -38,7 +38,7 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh; /* Full viewport height */
+    /*height: 150vh; /* Full viewport height */
     padding: 20px; /* Add some padding */
 }
 
