--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,6 +1,6 @@
 html, body {
-    height: 100%; /* Ensure the body takes full height */
-    margin: 0; /* Remove default margin */
+    height: 100%;
+    margin: 0; 
 }
 
 .home-page {
@@ -14,7 +14,6 @@ html, body {
     box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.15);
 }
 
-/* Header Styling */
 .home-page h1 {
     transition: all 0.3s ease;
     color: var(--question-wrapper-header-text);
@@ -24,7 +23,6 @@ html, body {
     font-weight: 600;
   }
   
-/* Paragraph Styling */
 .home-page p {
     transition: all 0.3s ease;
     color: var(--question-wrapper-text);
@@ -38,49 +36,48 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*height: 150vh; /* Full viewport height */
-    padding: 20px; /* Add some padding */
+    padding: 20px; 
 }
 
 header {
     text-align: center;
-    margin-bottom: 0; /* Minimal space below the header */
-    padding-top: 20px; /* Add space from the top */
+    margin-bottom: 0; 
+    padding-top: 20px; 
 }
 
 h1 {
-    margin: 0; /* Remove margin to bring it closer to the top */
+    margin: 0; 
 }
 
 .button-container-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Center the button container vertically */
-    flex-grow: 1; /* Make this section take up remaining space */
+    justify-content: center;
+    flex-grow: 1; 
     width: 100%;
 }
 
 .button-container {
     display: flex;
-    width: 100%; /* Full width */
-    justify-content: space-between; /* Space out the buttons */
+    width: 100%; 
+    justify-content: space-between; 
 }
 
 .left-button, .right-button {
-    width: 48%; /* Each button section takes up nearly half of the container */
-    text-align: center; /* Center text for better presentation */
+    width: 48%; 
+    text-align: center; 
 }
 
 p {
-    margin-top: 20px; /* Increased spacing above the paragraph */
+    margin-top: 20px; 
 }
 
-/* Add hover effects for the buttons */
+
 .quiz_button {
     transition: background-color 0.3s ease, transform 0.2s ease;
-    width: 65%; /*320px*/
+    width: 65%; 
     height: 60px;
-    font-size: 2rem; /*30px*/
+    font-size: 2rem;
     transition: all 0.3s ease;
     background-color: var(--quiz-button-color);
 }
@@ -102,21 +99,21 @@ button {
 
 button:hover {
     transition: all 0.3s ease;
-    background-color: var(--question-button-color-hover); /* Bootstrap blue for hover */
-    transform: scale(1.05); /* Slight scaling effect */
-    color: var(--question-button-text-color-hover); /* White text on hover */
+    background-color: var(--question-button-color-hover);
+    transform: scale(1.05); 
+    color: var(--question-button-text-color-hover);
 }
 
-/* Mobile responsive design */
+
 @media (max-width: 768px) {
     .button-container {
-        flex-direction: column; /* Stack buttons vertically */
+        flex-direction: column; 
         align-items: center;
         margin-left: 0;
     }
 
     .left-button, .right-button {
-        width: 80%; /* Reduce button width */
-        margin-bottom: 30px; /* Add space between stacked buttons */
+        width: 80%;
+        margin-bottom: 30px;
     }
 }
